@@ -54,11 +54,11 @@ class tx_solr_pi_results_SortingCommand implements tx_solr_PluginCommand {
 	protected $configuration;
 
 	/**
-	 * Constructor for class tx_solr_pi_results_SortingCommand
+	 * Constructor.
 	 *
-	 * @param	tslib_pibase	$parentPlugin parent plugin
+	 * @param tx_solr_pluginbase_CommandPluginBase Parent plugin object.
 	 */
-	public function __construct(tslib_pibase $parentPlugin) {
+	public function __construct(tx_solr_pluginbase_CommandPluginBase $parentPlugin) {
 		$this->search = t3lib_div::makeInstance('tx_solr_Search');
 
 		$this->parentPlugin  = $parentPlugin;
