@@ -1,6 +1,7 @@
 2012-02-14  Ingo Renner  <ingo.renner@dkd.de>
 
 	!!! Changed plugin.tx_solr.templateFile to plugin.tx_solr.templateFiles - notice the S at the end
+	!!! Changed interface tx_solr_PluginCommand to expect an instance of tx_solr_pluginbase_CommandPluginBase as the parent plugin instead of tslib_pibase
 	! Changed Index Queue tables to use InnoDB engine
 
 	* Added Polish Translations, credits Jan Slusarczyk
